# video_shaders

./: .gitignore  CMakeLists.txt
include/: gl_renderer.h  shaders.h  video.h
shaders/: blur_h.frag  blur_h_struct.frag  blur_h_wide.frag  blur_iso_struct.frag  blur_v.frag  blur_v_struct.frag  blur_v_wide.frag  brush_distort.frag  chromatic_aberration.frag  cool_grade.frag  dog_overlay.frag  edge_overlay.frag  film_grain.frag  flow_smear.frag  halftone.frag  kuwahara.frag  kuwahara_aniso.frag  kuwahara_h.frag  kuwahara_v.frag  oil_strokes.frag  palette.frag  paper_warp.frag  passthrough.frag  pointillist.frag  posterize.frag  risograph.frag  saturation.frag  sobel.frag  voronoi.frag  warm_grade.frag  xdog.frag
src/: gl_renderer.cpp  main.cpp  shaders.cpp  video.cpp
test_data/: generate_test_videos.sh
tests/: test_gl_renderer.cpp  test_integration.cpp  test_video.cpp
